[package]
name = "snake_game"
version = "0.1.0"
authors = ["alex"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.40.0"
pistoncore-glutin_window = "0.69.0"
piston_window = "0.107.0"
piston2d-opengl_graphics = "0.78.0"
rand = "0.8.4"
rusttype = "0.8.2"
fnv = "1.0.6"
gfx_device_gl = "0.16.2"